--- a/Create-account-watcher/create-account-watcher2.html
+++ b/Create-account-watcher/create-account-watcher2.html
@@ -14,7 +14,7 @@
   <body>
     <header class="small-header">
       <div class="small-header-wrap">
-        <a href="/index.html"><img src="/images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+        <a href="/index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
           <nav class="right-nav">
            <ul>
             <a href="/index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
