--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="content-wrap">
         <h2>Film-lover?</h2>
          <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
-            <a href="films.html" class="button1">Explore our films</a>
+          <div class="index-button"><a href="films.html" class="button1">Explore our films</a></div>
         </div>
       </section>
 
@@ -61,7 +61,7 @@
         <img src="images/man-filming.jpg" alt="Producer filming" class="index-picture">
         <h4>Are you a producer?</h4>
          <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
-         <a href="create-account.html" class="button2">Create an account</a>
+         <div class="index-button"><a href="create-account.html" class="button2">Create an account</a></div>
         </button> 
         </div>
       </section>
