--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
       <div class="content-wrap">
             
         <section><a href="index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a></section>
-         <section><ul>
-          <li><a href="index.html">Home</a></li>
-            <li><a href="films.html">Films</a></li>
-              <li><a href="producers.html">Producers</a></li>
-                <li><a href="search.html">Search</a></li>
-              </ul></section>
+         <section class="footer-nav">
+          <a href="index.html">Home</a>
+            <a href="films.html">Films</a>
+              <a href="producers.html">Producers</a>
+                <a href="search.html">Search</a>
+              </section>
                   <section><a href="index.html"><i class="fas fa-arrow-up"></i></a></section>
         </div>
     </footer>
